added basic css to login page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,6 @@
+{% extends './base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +9,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoginSystem</title> 
 </head>
-<body>
-    <form method="post">
+<body style="text-align: center;" >
+    <form method="post" style=
+                            "   position: relative;
+                                z-index: 1;
+                                background: #ffffff;
+                                max-width: 360px;
+                                margin: 0 auto 100px;
+                                margin-top: 100px;
+                                padding: 45px;
+                                text-align: center;
+                                box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+                            ">
+        <div class="form-label-group">
+            <input style=
+                        "
+                            font-family: 'roboto', sans-serif;
+                            outline: 0;
+                            background: #f2f2f2;
+                            width: 100%;
+                            border: 0;
+                            margin: 0 0 15px;
+                            padding: 15px;
+                            box-sizing: border-box;
+                            font-size: 14px;
+                        "type="username" id="inputuser" name="username" class="form-control" placeholder="nome do usuário" required autofocus>
+        </div>
+        <div class="form-label-group" style="margin-top: 10px;">
+            <input style=
+                        "
+                            font-family: 'roboto', sans-serif;
+                            outline: 0;
+                            background: #f2f2f2;
+                            width: 100%;
+                            border: 0;
+                            margin: 0 0 15px;
+                            padding: 15px;
+                            box-sizing: border-box;
+                            font-size: 14px;
+                        "type="password" id="inputpassword" name="password" class="form-control" placeholder="senha" required>
+        </div>
+        <input style=
+                    "font-family: 'roboto', sans-serif;
+                    text-transform: uppercase;
+                    outline: 0;
+                    background: #4caf50;
+                    width: 100%;
+                    border: 0;
+                    padding: 15px;
+                    color: #ffffff;
+                    font-size: 14px;
+                    -webkit-transition: all 0.3 ease;
+                    transition: all 0.3 ease;
+                    cursor: pointer" type="submit" value="login"/>
+                
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Login"/>
-        
     </form>
-
 </body>
 </html>
+
+{% endblock %}
