--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -21,10 +21,16 @@
                                 text-align: center;
                                 box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
                             ">
+        <h1 style= 
+                "
+                    font-family: 'roboto', sans-serif;
+                    color: #5e5e5e;
+                ">IMD College Open API</h1>
         <div class="form-label-group">
             <input style=
                         "
                             font-family: 'roboto', sans-serif;
+                            color: #5e5e5e;
                             outline: 0;
                             background: #f2f2f2;
                             width: 100%;
@@ -52,8 +58,9 @@
         <input style=
                     "font-family: 'roboto', sans-serif;
                     text-transform: uppercase;
+                    font-weight: 300;
                     outline: 0;
-                    background: #4caf50;
+                    background: #4bb11c;
                     width: 100%;
                     border: 0;
                     padding: 15px;
@@ -64,6 +71,9 @@
                     cursor: pointer" type="submit" value="login"/>
                 
         {% csrf_token %}
+        <p style="font-family: 'roboto', sans-serif; color:#5e5e5e">Caso não tenha cadastro, só seguir no link abaixo e fazer um POST com os seus dados em: </p>
+        <p style="font-family: 'roboto', sans-serif; color:#5e5e5e; font-weight: bold;">/academic/professor/ ou /academic/student/</p>
+        <a href="/swagger/" style="font-family: 'roboto', sans-serif;">IMD College Open API</a>
     </form>
 </body>
 </html>
